quick_tests/cases/pass/p01_if_else_exit_code.webx
fn main() -> i32 { if true { return 0; } else { return 1; } }