quick_tests/cases/fail/f31_missing_semicolon_after_while.webx
fn main() -> i32 { while true { return 0; } return 0; }